Various cleanups in kafka-init (#9279)
Signed-off-by: Mickael Maison <mickael.maison@gmail.com>